# HOverlord

./: .gitignore  README.md  cabal.project
HOverlord/: HOverlord.cabal  shell.nix
HOverlord/cli/: Main.hs
HOverlord/lib/: HOverlord.hs  Lib.hs  WinShot.hsc
HOverlord/lib/HOverlord/: ScreenShot.hs  WinShot.hsc
HOverlord/lib/cbits/: WinShot.c  WinShot.cpp
HOverlord/lib/cpp/: WinShot.cpp
HOverlord/srv/: Main.hs
