cabal-version       : 3.0

name                : hoverlord
version             : 0.1.0.0
author              : Maštarija
maintainer          : 51950685+mastarija@users.noreply.github.com

build-type          : Simple

common core
  build-depends     : base
                    , text
                    , bytestring
  default-language  : Haskell2010

library
  import            : core
  build-depends     : bitmap
  include-dirs      : cbits
  c-sources         : cbits/WinShot.c
  hs-source-dirs    : lib
  exposed-modules   : HOverlord
                    , HOverlord.WinShot
                    , HOverlord.ScreenShot

executable HClient
  import            : core
  main-is           : Main.hs
  hs-source-dirs    : cli

executable HServer
  import            : core
  main-is           : Main.hs
  hs-source-dirs    : srv
